# turnus.orcc

./: .gitignore  .gitmodules  .project  README.md  pom.xml
turnus.orcc.feature/: .project  feature.xml  pom.xml
turnus.orcc.profiler/: .classpath  .project  build.properties  plugin.xml  pom.xml
turnus.orcc.profiler.ui/: .project  plugin.xml  pom.xml
turnus.orcc.profiler.ui/src/turnus/orcc/profiler/ui/: Activator.java
turnus.orcc.profiler.ui/src/turnus/orcc/profiler/ui/benchmark/: BackendSelector.xtend  LaunchBackendSelector.xtend  TurnusBenchmarkLaunchDelegate.java  TurnusBenchmarkLaunchShortcut.xtend
turnus.orcc.profiler.ui/src/turnus/orcc/profiler/ui/code/: OrccCodeAnalysisLaunchDelegate.java  OrccCodeAnalysisLaunchShortcut.java
turnus.orcc.profiler.ui/src/turnus/orcc/profiler/ui/dynamic/: OrccDynamicExecutionLaunchDelegate.java  OrccDynamicExecutionLaunchShortcut.java  OrccDynamicInterpreterLaunchDelegate.java  OrccDynamicInterpreterLaunchShortcut.java  OrccNumaExecutionLaunchDelegate.java  OrccNumaExecutionLaunchShortcut.java  TabuSearchPerformanceEstimationLaunchDelegate.java  TabuSearchPerformanceEstimationLaunchShortcut.java
turnus.orcc.profiler/runtime/C/numap/: CMakeLists.txt
turnus.orcc.profiler/runtime/C/numap/include/: numap.h
turnus.orcc.profiler/runtime/C/numap/src/: numap.c
turnus.orcc.profiler/runtime/C/orcc-libs/: CMakeLists.txt
turnus.orcc.profiler/runtime/C/orcc-libs/orcc-native/: CMakeLists.txt
turnus.orcc.profiler/runtime/C/orcc-libs/orcc-native/include/: thread.h
turnus.orcc.profiler/runtime/C/orcc-libs/orcc-runtime/: CMakeLists.txt
turnus.orcc.profiler/runtime/C/orcc-libs/orcc-runtime/src/: scheduler.c
turnus.orcc.profiler/schema/: scheduler.exsd
turnus.orcc.profiler/src/turnus/orcc/profiler/: Activator.java  ProfilerOptions.java
turnus.orcc.profiler/src/turnus/orcc/profiler/benchmark/: CompilerConfig.xtend  NetworkPreprocessingConfig.xtend  TurnusBenchmark.xtend
turnus.orcc.profiler/src/turnus/orcc/profiler/code/: OrccCodeAnalysis.java  OrccCodeAnalysisCli.java
turnus.orcc.profiler/src/turnus/orcc/profiler/util/: OrccBufferSizer.java  OrccProfilerConstants.java  OrccSourceCodeDebugger.java  OutputDirectoryBuilder.java  RuntimeUtils.java  TurnusModelAdapter.java  TurnusModelInjector.java
turnus.orcc.util/: .project  plugin.xml  pom.xml
turnus.orcc.util/src/turnus/orcc/util/: Activator.java
turnus.orcc.util/src/turnus/orcc/util/cpp/: MarkovSchedulerCppBuilder.xtend  TestCppPrinter.java
turnus.orcc.util/src/turnus/orcc/util/hevc/: MergerReplaceSize.java
turnus.orcc.util/src/turnus/orcc/util/numa/: NUMAweightsMergerCli.java
turnus.orcc.util/src/turnus/orcc/util/papi/: PapiParser.java  PapiParserCli.java
turnus.orcc.util/src/turnus/orcc/util/tta/: TTAweightsMerger.java  TTAweightsMergerCli.java
util/: README.md
util/features/net.sf.orcc.feature/: feature.xml
(+69 files in other folders)
